examples/test/testpolicy5990.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5990
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key11: value1
      key27: value37
      key12: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value25
      podSelector:
        matchLabels:
          key33: value48
          key44: value14
